--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile file("ceskeystore.jks")
+            storePassword "colt1911"
+            keyAlias "ces"
+            keyPassword "colt1911"
+        }
+        release {
+            storeFile file("ceskeystore.jks")
+            storePassword "colt1911"
+            keyAlias "ces"
+            keyPassword "colt1911"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:support-v4:23.1.1'
 }
