--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
 		  xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
 	<application
 		android:allowBackup="true"
@@ -12,9 +12,9 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-
 		<service android:name="com.backendless.geo.LocationTracker"/>
-		<receiver android:name="com.backendless.AutoStart" >
+
+		<receiver android:name="com.backendless.AutoStart">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
 			</intent-filter>
@@ -26,12 +26,38 @@
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
+
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".ActMain"
 			android:label="@string/title_activity_act_main"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+		<!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+		<meta-data
+			android:name="com.google.android.geo.API_KEY"
+			android:value="@string/google_maps_key"/>
+
+		<activity
+			android:name=".ActMaps"
+			android:label="@string/title_activity_act_maps">
+		</activity>
+		<activity
+			android:name=".ActConfig"
+			android:label="@string/title_activity_act_config">
+		</activity>
+		<activity
+			android:name=".ActLugar"
+			android:label="@string/title_activity_act_lugar"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 	</application>
