--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+
 		<service android:name="com.backendless.geo.LocationTracker"/>
 
 		<receiver android:name="com.backendless.AutoStart">
@@ -60,6 +61,11 @@
 			android:label="@string/title_activity_act_lugar"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
+		<!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+			 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version"/>
 	</application>
 
 </manifest>
