aun con  ActAviso, pero se crea ActRuta...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,22 +36,7 @@
 			android:label="@string/title_activity_act_main"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
-		<!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
-		<meta-data
-			android:name="com.google.android.geo.API_KEY"
-			android:value="@string/google_maps_key"/>
 
-		<activity
-			android:name=".ActMaps"
-			android:label="@string/title_activity_act_maps">
-		</activity>
 		<activity
 			android:name=".ActConfig"
 			android:label="@string/title_activity_act_config">
@@ -61,6 +46,33 @@
 			android:label="@string/title_activity_act_lugar"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
+		<activity
+			android:name=".ActRuta"
+			android:label="@string/title_activity_act_ruta"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+		<activity
+			android:name=".ActAviso"
+			android:label="@string/title_activity_act_aviso"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+
+		<activity
+			android:name=".ActMaps"
+			android:label="@string/title_activity_act_maps">
+		</activity>
+		<!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+		<meta-data
+			android:name="com.google.android.geo.API_KEY"
+			android:value="@string/google_maps_key"/>
+
 		<!-- ATTENTION: This was auto-generated to add Google Play services to your project for
 			 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
 		<meta-data
