Cambiar recepcion de geofences de servicio a broadcast..... dicen que servicio falla de vez en cuando....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
 		android:theme="@style/AppTheme">
 
 
+		<receiver android:name=".CesGeofenceReceiver" android:exported="false">
+			<intent-filter >
+				<action android:name="com.cesoft.encuentrame.ACTION_RECEIVE_GEOFENCE"/>
+			</intent-filter>
+		</receiver>
 		<!-- service android:name="com.backendless.geo.LocationTracker"/>
 		<receiver android:name="com.backendless.AutoStart">
 			<intent-filter>
