--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE" />
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
 
 	<application
 		android:allowBackup="true"
@@ -18,24 +18,27 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-
-
-		<receiver android:name=".CesGeofenceReceiver" android:exported="false">
-			<intent-filter >
+		<receiver
+			android:name=".CesGeofenceReceiver"
+			android:exported="false">
+			<intent-filter>
 				<action android:name="com.cesoft.encuentrame.ACCION_RECIBE_GEOFENCE"/>
 			</intent-filter>
 		</receiver>
-		<!-- service android:name="com.backendless.geo.LocationTracker"/>
+		<!--
+        service android:name="com.backendless.geo.LocationTracker"/>
 		<receiver android:name="com.backendless.AutoStart">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
 			</intent-filter>
-		</receiver -->
+		</receiver
+        -->
 		<receiver android:name=".CesOnSysBoot">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
 			</intent-filter>
 		</receiver>
+
 		<service
 			android:name=".CesService"
 			android:exported="false"/>
@@ -58,7 +61,6 @@
 			android:label="@string/title_activity_act_main"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
-
 		<activity
 			android:name=".ActConfig"
 			android:label="@string/title_activity_act_config">
@@ -78,7 +80,6 @@
 			android:label="@string/title_activity_act_aviso"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
-
 		<activity
 			android:name=".ActMaps"
 			android:label="@string/title_activity_act_maps">
@@ -95,11 +96,19 @@
 			android:name="com.google.android.geo.API_KEY"
 			android:value="@string/google_maps_key"/>
 
-		<!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-			 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+		<!--
+             ATTENTION: This was auto-generated to add Google Play services to your project for
+			 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
 		<meta-data
 			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version"/>
+
+		<activity
+			android:name=".ActBuscar"
+			android:label="@string/title_activity_act_buscar"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
 	</application>
 
 </manifest>
