--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.firebase:geofire:1.1.0+'
 }
