--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+
 		<receiver
 			android:name=".CesGeofenceReceiver"
 			android:exported="false">
@@ -46,6 +47,7 @@
 			android:name=".CesServiceAvisoGeo"
 			android:exported="false"/>
 
+		<!-- ************** ACTIVITIES ************** -->
 		<activity
 			android:name=".ActLogin"
 			android:label="@string/app_name"
@@ -93,6 +95,8 @@
 		<activity
 			android:name=".ActWidgetNuevaRuta"
 			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" />
+
+		<!-- ************** META DATA ************** -->
 		<!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -113,7 +117,7 @@
 			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version"/>
 
-		<!-- WIDGETs -->
+		<!-- ************** WIDGETs ************** -->
 		<receiver
 			android:name=".WidgetLugar"
 			android:label="@string/widget_lugar">
@@ -125,6 +129,8 @@
 				android:name="android.appwidget.provider"
 				android:resource="@xml/widget_lugar"/>
 		</receiver>
+
+		<service android:name=".WidgetRutaService" />
 		<receiver
 			android:name=".WidgetRuta"
 			android:label="@string/widget_ruta">
@@ -140,5 +146,4 @@
 		</receiver>
 
 	</application>
-
 </manifest>
