--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,5 @@
 
 org.gradle.parallel=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx3400m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-XX\:MaxHeapSize\=512m -Xmx512m
