--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.cesoft.encuentrame2"
+        applicationId "com.cesoft.encuentrame3"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.4"
         multiDexEnabled true
     }
     buildTypes {
@@ -58,4 +58,10 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.firebase:geofire-android:2.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
