--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
 	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
 
 	<application
-		android:name="android.support.multidex.MultiDexApplication"
+		android:name="com.cesoft.encuentrame3.App"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+		<!-- android:name="android.support.multidex.MultiDexApplication" -->
 
 		<receiver
 			android:name=".CesGeofenceReceiver"
