--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,19 +32,7 @@ android {
     if (project.hasProperty('storeFile')) {
         signingConfigs.release.storeFile = storeFile
     }
-    //---------------------------------------------------------
-    if (project.hasProperty('keyAlias')) {
-        signingConfigs.debug.keyAlias = keyAlias
-    }
-    if (project.hasProperty('keyPassword')) {
-        signingConfigs.debug.keyPassword = keyPassword
-    }
-    if (project.hasProperty('storePassword')) {
-        signingConfigs.debug.storePassword = storePassword
-    }
-    if (project.hasProperty('storeFile')) {
-        signingConfigs.debug.storeFile = storeFile
-    }*/
+    */
 
     return true
 }
@@ -65,9 +53,9 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.firebase:geofire-android:2.1.0'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
+    /*debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'*/
 }
 
 apply plugin: 'com.google.gms.google-services'
