--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
 
+	<uses-feature android:name="android.hardware.location.gps" />
+
 	<application
 		android:name="com.cesoft.encuentrame3.App"
 		android:allowBackup="true"
