--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.cesoft.encuentrame3"
         minSdkVersion 16
-        targetSdkVersion 24
-        versionCode 8
-        versionName "1.8"
+        targetSdkVersion 25
+        versionCode 9
+        versionName "1.9"
         multiDexEnabled true
     }
     buildTypes {
@@ -44,9 +44,9 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'*/
     compile 'org.jetbrains:annotations:13.0'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
@@ -57,9 +57,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.firebase:geofire-android:2.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    //compile 'com.squareup.picasso:picasso:2.5.2'
+    //compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:25.0.0'
 }
-
 
 apply plugin: 'com.google.gms.google-services'
