--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 		<!-- android:name="android.support.multidex.MultiDexApplication" -->
 
 		<receiver
-			android:name=".CesGeofenceReceiver"
+			android:name=".svc.CesGeofenceReceiver"
 			android:exported="false">
 			<intent-filter>
 				<action android:name="com.cesoft.encuentrame3.ACCION_RECIBE_GEOFENCE"/>
@@ -43,17 +43,17 @@
 			</intent-filter>
 		</receiver
         -->
-		<receiver android:name=".CesOnSysBoot">
+		<receiver android:name=".svc.CesOnSysBoot">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
 			</intent-filter>
 		</receiver>
 
 		<service
-			android:name=".CesService"
+			android:name=".svc.CesService"
 			android:exported="false"/>
 		<service
-			android:name=".CesServiceAvisoGeo"
+			android:name=".svc.CesServiceAvisoGeo"
 			android:exported="false"/>
 
 		<!-- ************** ACTIVITIES ************** -->
@@ -104,6 +104,11 @@
 		<activity
 			android:name=".ActWidgetNuevaRuta"
 			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
+		<activity
+			android:name=".ActImagen"
+			android:configChanges="orientation|keyboardHidden|screenSize"
+			android:label="@string/title_act_imagen"
+			android:theme="@style/FullscreenTheme"/>
 
 		<!-- ************** META DATA ************** -->
 		<!--
@@ -128,7 +133,7 @@
 
 		<!-- ************** WIDGETs ************** -->
 		<receiver
-			android:name=".WidgetLugar"
+			android:name=".widget.WidgetLugar"
 			android:label="@string/widget_lugar">
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -140,10 +145,10 @@
 				android:resource="@xml/widget_lugar"/>
 		</receiver>
 
-		<service android:name=".WidgetRutaService"/>
+		<service android:name=".widget.WidgetRutaService"/>
 
 		<receiver
-			android:name=".WidgetRuta"
+			android:name=".widget.WidgetRuta"
 			android:label="@string/widget_ruta">
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -157,12 +162,5 @@
 				android:resource="@xml/widget_ruta"/>
 		</receiver>
 
-		<activity
-			android:name=".ActImagen"
-			android:configChanges="orientation|keyboardHidden|screenSize"
-			android:label="@string/title_act_imagen"
-			android:theme="@style/FullscreenTheme">
-		</activity>
 	</application>
-
 </manifest>
