--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,12 @@ dependencies {
 	compile 'com.google.firebase:firebase-storage:10.2.1'
 	compile 'com.google.firebase:firebase-crash:10.2.1'
 	compile 'com.firebase:geofire-android:2.1.0'
+
+	// Img
 	//compile 'com.squareup.picasso:picasso:2.5.2'
-	//compile 'com.squareup.okhttp:okhttp:2.4.0'
 	compile 'com.github.bumptech.glide:glide:3.7.0'
 
-
+	// Dagger
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 	compile 'com.google.dagger:dagger:2.8'
 	provided 'javax.annotation:jsr250-api:1.0'
