--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,43 +28,20 @@
 
 		<!-- android:name="android.support.multidex.MultiDexApplication" -->
 
-		<receiver
-			android:name=".svc.CesGeofenceReceiver"
-			android:exported="false">
-			<intent-filter>
-				<action android:name="com.cesoft.encuentrame3.ACCION_RECIBE_GEOFENCE"/>
-			</intent-filter>
-		</receiver>
-		<!--
-        service android:name="com.backendless.geo.LocationTracker"/>
-		<receiver android:name="com.backendless.AutoStart">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-			</intent-filter>
-		</receiver
-        -->
-		<receiver android:name=".svc.CesOnSysBoot">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-			</intent-filter>
-		</receiver>
-
-		<service
-			android:name=".svc.CesService"
-			android:exported="false"/>
-		<service
-			android:name=".svc.CesServiceAvisoGeo"
-			android:exported="false"/>
-
-		<!-- ************** ACTIVITIES ************** -->
+		<!-- ************************* ACTIVITIES ************************* -->
 		<activity
-			android:name=".ActLogin"
+			android:name=".ActSplash"
 			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/SplashTheme">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
+		</activity>
+		<activity
+			android:name=".ActLogin"
+			android:label="@string/app_name"
+			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 		<activity
 			android:name=".ActMain"
@@ -110,7 +87,35 @@
 			android:label="@string/title_act_imagen"
 			android:theme="@style/FullscreenTheme"/>
 
-		<!-- ************** META DATA ************** -->
+		<receiver
+			android:name=".svc.CesGeofenceReceiver"
+			android:exported="false">
+			<intent-filter>
+				<action android:name="com.cesoft.encuentrame3.ACCION_RECIBE_GEOFENCE"/>
+			</intent-filter>
+		</receiver>
+		<!--
+        service android:name="com.backendless.geo.LocationTracker"/>
+		<receiver android:name="com.backendless.AutoStart">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+			</intent-filter>
+		</receiver
+        -->
+		<receiver android:name=".svc.CesOnSysBoot">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+			</intent-filter>
+		</receiver>
+
+		<service
+			android:name=".svc.CesService"
+			android:exported="false"/>
+		<service
+			android:name=".svc.CesServiceAvisoGeo"
+			android:exported="false"/>
+
+		<!-- ************************* META DATA ************************* -->
 		<!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -131,7 +136,7 @@
 			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version"/>
 
-		<!-- ************** WIDGETs ************** -->
+		<!-- ************************* WIDGETs ************************* -->
 		<receiver
 			android:name=".widget.WidgetLugar"
 			android:label="@string/widget_lugar">
