--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'	//RetroLambda
 //apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -18,6 +19,11 @@ android {
 			minifyEnabled false
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
+	}
+	compileOptions	//RetroLambda
+	{
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
 	}
 
 	/*//---------------------------------------------------------
@@ -44,13 +50,16 @@ dependencies {
 	compile 'org.jetbrains:annotations:13.0'
 	compile 'com.android.support:multidex:1.0.1'
 
+	// Android
 	compile 'com.android.support:appcompat-v7:25.3.1'
 	compile 'com.android.support:design:25.3.1'
 	compile 'com.android.support:support-v4:25.3.1'
+	// Google
 	compile 'com.google.android.gms:play-services-location:10.2.1'
 	compile 'com.google.android.gms:play-services-auth:10.2.1'
 	compile 'com.google.android.gms:play-services-maps:10.2.1'
 	compile 'com.google.android.gms:play-services-gcm:10.2.1'
+	// Firebase
 	compile 'com.google.firebase:firebase-auth:10.2.1'
 	compile 'com.google.firebase:firebase-core:10.2.1'
 	compile 'com.google.firebase:firebase-database:10.2.1'
@@ -72,7 +81,6 @@ dependencies {
 	releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 	testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
-	//
 }
 
-apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'	//Google
