--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,16 @@ apply plugin: 'me.tatarka.retrolambda'	//RetroLambda
 
 android {
 	compileSdkVersion 25
-	buildToolsVersion '25.0.2'
+	buildToolsVersion '25.0.3'
 
 	defaultConfig {
-		applicationId "com.cesoft.encuentrame3"
+		applicationId 'com.cesoft.encuentrame3'
 		minSdkVersion 15
 		targetSdkVersion 25
 		versionCode 14
 		versionName "1.94"
 		multiDexEnabled true
+		testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
 	}
 	buildTypes {
 		release {
@@ -44,6 +45,14 @@ android {
 	return true
 }
 
+final ANDROID = '25.3.1'
+final GOOGLE = '10.2.4'
+final FIREBASE = '10.2.1'
+final DAGGER = '2.8'
+final RUNNER = '0.5'
+final ESPRESSO = '2.2.2'
+final JUNIT = '4.12'
+
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
 
@@ -51,29 +60,29 @@ dependencies {
 	compile 'com.android.support:multidex:1.0.1'
 
 	// Android
-	compile 'com.android.support:appcompat-v7:25.3.1'
-	compile 'com.android.support:design:25.3.1'
-	compile 'com.android.support:support-v4:25.3.1'
+	compile "com.android.support:appcompat-v7:${ANDROID}"
+	compile "com.android.support:design:${ANDROID}"
+	compile "com.android.support:support-v4:${ANDROID}"
 	// Google
-	compile 'com.google.android.gms:play-services-location:10.2.1'
-	compile 'com.google.android.gms:play-services-auth:10.2.1'
-	compile 'com.google.android.gms:play-services-maps:10.2.1'
-	compile 'com.google.android.gms:play-services-gcm:10.2.1'
+	compile "com.google.android.gms:play-services-location:${GOOGLE}"
+	compile "com.google.android.gms:play-services-auth:${GOOGLE}"
+	compile "com.google.android.gms:play-services-maps:${GOOGLE}"
+	compile "com.google.android.gms:play-services-gcm:${GOOGLE}"
 	// Firebase
-	compile 'com.google.firebase:firebase-auth:10.2.1'
-	compile 'com.google.firebase:firebase-core:10.2.1'
-	compile 'com.google.firebase:firebase-database:10.2.1'
-	compile 'com.google.firebase:firebase-storage:10.2.1'
-	compile 'com.google.firebase:firebase-crash:10.2.1'
-	compile 'com.firebase:geofire-android:2.1.0'
+	compile "com.google.firebase:firebase-auth:${FIREBASE}"
+	compile "com.google.firebase:firebase-core:${FIREBASE}"
+	compile "com.google.firebase:firebase-database:${FIREBASE}"
+	compile "com.google.firebase:firebase-storage:${FIREBASE}"
+	compile "com.google.firebase:firebase-crash:${FIREBASE}"
+	compile "com.firebase:geofire-android:2.1.0"
 
 	// Img
 	//compile 'com.squareup.picasso:picasso:2.5.2'
 	compile 'com.github.bumptech.glide:glide:3.7.0'
 
 	// Dagger
-	annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
-	compile 'com.google.dagger:dagger:2.8'
+	annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER}"
+	compile "com.google.dagger:dagger:${DAGGER}"
 	provided 'javax.annotation:jsr250-api:1.0'
 
 	// Leak Canary
@@ -81,6 +90,18 @@ dependencies {
 	releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 	testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
+	// Test
+	testCompile "junit:junit:${JUNIT}"
+	// Android Test
+	androidTestCompile "junit:junit:${JUNIT}"
+	androidTestCompile "com.android.support.test:runner:${RUNNER}"
+	androidTestCompile "com.android.support.test:rules:${RUNNER}"
+	androidTestCompile "com.android.support.test.espresso:espresso-core:${ESPRESSO}"
+	androidTestCompile "com.android.support.test.espresso:espresso-intents:${ESPRESSO}"
+	androidTestCompile "com.android.support:support-annotations:${ANDROID}"
+	androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${DAGGER}"
+	androidTestCompile 'org.mockito:mockito-android:2.6.2'
+	androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'	//Google
