--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,16 +92,27 @@ dependencies {
 
 	// Test
 	testCompile "junit:junit:${JUNIT}"
+	testCompile "org.robolectric:robolectric:3.3.2"
+	testCompile 'org.mockito:mockito-android:2.6.2'
 	// Android Test
 	androidTestCompile "junit:junit:${JUNIT}"
+	androidTestCompile 'org.mockito:mockito-android:2.6.2'
+	androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 	androidTestCompile "com.android.support.test:runner:${RUNNER}"
 	androidTestCompile "com.android.support.test:rules:${RUNNER}"
 	androidTestCompile "com.android.support.test.espresso:espresso-core:${ESPRESSO}"
 	androidTestCompile "com.android.support.test.espresso:espresso-intents:${ESPRESSO}"
 	androidTestCompile "com.android.support:support-annotations:${ANDROID}"
 	androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${DAGGER}"
-	androidTestCompile 'org.mockito:mockito-android:2.6.2'
-	androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+
+	/*androidTestCompile("com.android.support.test.espresso:espresso-contrib:2.2")
+	{
+		// Necessary to avoid version conflicts
+		exclude group: 'com.android.support', module: 'appcompat'
+		exclude group: 'com.android.support', module: 'support-v4'
+		exclude group: 'com.android.support', module: 'support-annotations'
+		exclude module: 'recyclerview-v7'
+	}*/
 }
 
 apply plugin: 'com.google.gms.google-services'	//Google
