--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,14 @@
 buildscript {
 	repositories {
 		jcenter()
+		google()
+		mavenCentral()
+		maven { url 'https://maven.google.com' }
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.3.2'
-		classpath 'com.google.gms:google-services:3.0.0'	//Google
-		classpath 'me.tatarka:gradle-retrolambda:3.6.1'		//RetroLambda
+		classpath 'com.android.tools.build:gradle:3.1.3'
+		classpath 'me.tatarka:gradle-retrolambda:3.7.0'		//RetroLambda
+		classpath 'com.google.gms:google-services:4.0.1'
 		//classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
 		// NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +21,9 @@ buildscript {
 allprojects {
 	repositories {
 		jcenter()
+		google()
+		mavenCentral()
+		maven { url 'https://maven.google.com' }
 	}
 }
 
